new_tests/semantics/type/bad/089_ARRAYLITERAL_6.cm
/*
    Type Error 456

    1| def a:Array[Array[Int]] = Array[2]['c'](Array(1,2,3),Array(4,5))
    The value 'c' is not a valid dimension size for the array.

    Suggestion:
    Int constants are required in order to specify the dimensions of an array.
*/

def a:Array[Array[Int]] = Array[2]['c'](Array(1,2,3),Array(4,5))
